added local storage to save user logged in state, logout functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
             <input name="room" type="text" required>
             <button type="submit">join room</button>
           </form>
+        <button id="logout">Logout</button>
     </div>
 </body>
 <script src="bundle.js"></script>
