--- a/views/room.ejs
+++ b/views/room.ejs
@@ -13,7 +13,13 @@
             <button>Login With Spotify</button>
         </a>
     </div>
-    <div id="roomloggedin"></div>
+    <div id="roomloggedin">
+        <form id="message">
+            <input name="message" type="text" required>
+            <button type="submit">send</button>
+          </form>
+        <button id="logout">Logout</button>
+    </div>
 </body>
 <script src="bundle.js"></script>
 </html>
