added leave button within room

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -18,7 +18,7 @@
             <input name="message" type="text" required>
             <button type="submit">send</button>
           </form>
-        <button id="logout">Logout</button>
+        <button id="leaveroom">leave</button>
     </div>
 </body>
 <script src="bundle.js"></script>
