implemented some search functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
             <button id='createroom'>create game</button>
         </form>
         <form id="join">
-            <input name="room" type="text" required>
+            <input name="room" autocomplete="off" type="text" required>
             <button type="submit">join room</button>
           </form>
         <button id="logout">Logout</button>
