--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,25 @@
     <script src="/socket.io/socket.io.js"></script>
     <title>AuxBox</title>
 </head>
+
 <body>
     <div id="roomlogin">
-        <a class="btn" href="https://accounts.spotify.com/authorize?client_id=19fb730b06934300af7ce6a4c9162ed5&response_type=code&redirect_uri=http://localhost:3000&scope=streaming%20user-read-email%20user-read-private%20user-library-read%20user-library-modify%20user-read-playback-state%20user-modify-playback-state%20user-top-read">
+        <a class="btn"
+            href="https://accounts.spotify.com/authorize?client_id=19fb730b06934300af7ce6a4c9162ed5&response_type=code&redirect_uri=http://localhost:3000&scope=streaming%20user-read-email%20user-read-private%20user-library-read%20user-library-modify%20user-read-playback-state%20user-modify-playback-state%20user-top-read">
             <button>Login With Spotify</button>
         </a>
     </div>
     <div id="roomloggedin">
         <form id="message">
-            <input name="message" type="text" required>
+            <input name="message" autocomplete="off" type="text" required>
             <button type="submit">send</button>
-          </form>
+        </form>
+        <input type="text" id="search" placeholder="Search for names..">
+        <div id="results">
+        </div>
         <button id="leaveroom">leave</button>
     </div>
 </body>
 <script src="bundle.js"></script>
+
 </html>
