--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,7 @@
-#login {
-  width: 100%;
-  position: absolute;
-  z-index: 2;
-  top: 50%;
-  text-align: center;
+body {
+  margin: 0;
 }
-
 #loggedin {
-  display: none;
-}
-
-#roomlogin {
   width: 100%;
   position: absolute;
   z-index: 2;
@@ -19,9 +10,22 @@
 }
 
 #roomloggedin {
-  display: none;
+  width: 100%;
+  position: absolute;
+  text-align: center;
+  justify-content: space-between;
 }
 
+.song {
+  position: left;
+  display: flex;
+  cursor: pointer;
+}
+
+img{
+  display: block;
+  align-self: center;
+}
 
 .text-overflow {
   overflow: hidden;
