--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,11 @@
 <body>
     <div id='loggedin'>
         <form action="/room" method="post">
-            <button id='createroom'>create game</button>
+            <button id='createroom'>Create Game</button>
         </form>
         <form id="join">
             <input name="room" autocomplete="off" type="text" required>
-            <button type="submit">join room</button>
+            <button type="submit">Join Room</button>
           </form>
     </div>
 </body>
