--- a/views/room.ejs
+++ b/views/room.ejs
@@ -14,7 +14,7 @@
         <div class='song' onclick="">
             <img src="" alt="image">
             <div id="title">
-                <h3>here</h3>
+                <h3></h3>
             </div>
         </div>
     </template>
@@ -29,9 +29,9 @@
         </div>
         <form id="message">
             <input name="message" autocomplete="off" type="text" required>
-            <button type="submit">send</button>
+            <button type="submit">Send</button>
         </form>
-        <button id="leaveroom">leave</button>
+        <button id="leaveroom">Leave</button>
     </div>
 </body>
 <script src="bundle.js"></script>
