--- a/public/style.css
+++ b/public/style.css
@@ -14,16 +14,35 @@ body {
   text-align: center;
 }
 
-#roomloggedin {
-  width: 50%;
-  margin: 0 auto;
-  text-align: center;
+.container {
+  display: flex;
   justify-content: center;
+}
+
+#playerlist {
+  flex: 1 1 auto;
+  min-height: 100px;
+  min-width: 70px;
+  position: relative;
+}
+
+#messages {
+  flex: 1 1 auto;
+  min-height: 100px;
+  min-width: 70px;
+  position: relative;
+}
+
+#searchbox {
+  flex: 1 1 auto;
+  min-width: 300px;
+  position: relative;
+  margin: 0;
+  line-height: 0;
 }
 
 #search {
   width: 100%;
-  height: 5%;
 }
 
 .song {
