--- a/views/room.ejs
+++ b/views/room.ejs
@@ -10,6 +10,31 @@
 </head>
 
 <body>
+    <div class="header"><h1>prompt</h1></div>
+    <div class="container">
+        <div id="playerlist">
+            <ul>
+                <li>players</li>
+                <li>players</li>
+                <li>players</li>
+                <li>players</li>
+
+            </ul>
+        </div>
+        <div id="searchbox">
+            <input type="text" id="search" placeholder="Search for a track.." autocomplete="off">
+            <div id="results"></div>
+            <div id="show"></div>
+        </div>
+        <div id="chatbar">
+            <div id="messages">messages show up here</div>
+            <form id="message">
+                <input name="message" autocomplete="off" type="text" required>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
+    <button id="leaveroom">Leave</button>
     <template id="r">
         <div class='song' onclick="">
             <img src="" alt="image">
@@ -18,21 +43,6 @@
             </div>
         </div>
     </template>
-
-    <div id="roomloggedin">
-        <div id="searchbox">
-            <input type="text" id="search" placeholder="Search for a track.." autocomplete="off">
-            <div id="results">
-            </div>
-        </div>
-        <div id="show">
-        </div>
-        <form id="message">
-            <input name="message" autocomplete="off" type="text" required>
-            <button type="submit">Send</button>
-        </form>
-        <button id="leaveroom">Leave</button>
-    </div>
 </body>
 <script src="bundle.js"></script>
 
